@@ -1640,7 +1640,7 @@ get_one_private_key (NMConnection *connection,
 		filename = g_object_get_data (G_OBJECT (connection), NMA_PATH_PHASE2_PRIVATE_KEY_TAG);
 		secret_name = NM_SETTING_802_1X_PHASE2_PRIVATE_KEY;
 	} else {
-		g_set_error (error, NM_SETTINGS_ERROR, 1,
+		g_set_error (error, NM_SETTINGS_ERROR, NM_SETTINGS_ERROR_SECRETS_UNAVAILABLE,
 		             "%s.%d - %s/%s Unknown private key password type '%s'.",
 		             __FILE__, __LINE__, nm_setting_connection_get_id (s_con), setting_name, tag);
 		return FALSE;
@@ -1663,7 +1663,7 @@ get_one_private_key (NMConnection *connection,
 	if (*error) {
 		goto out;
 	} else if (!array || !array->len) {
-		g_set_error (error, NM_SETTINGS_ERROR, 1,
+		g_set_error (error, NM_SETTINGS_ERROR, NM_SETTINGS_ERROR_SECRETS_UNAVAILABLE,
 		             "%s.%d - %s/%s couldn't read private key.",
 		             __FILE__, __LINE__, nm_setting_connection_get_id (s_con), setting_name);
 		goto out;
@@ -1740,7 +1740,7 @@ nm_gconf_get_keyring_items (NMConnection *connection,
 		}
 
 		if (key_name == NULL) {
-			g_set_error (error, NM_SETTINGS_ERROR, 1,
+			g_set_error (error, NM_SETTINGS_ERROR, NM_SETTINGS_ERROR_SECRETS_UNAVAILABLE,
 			             "%s.%d - Internal error; keyring item '%s/%s' didn't "
 			             "have a 'setting-key' attribute.",
 			             __FILE__, __LINE__, connection_name, setting_name);
@@ -1756,7 +1756,7 @@ nm_gconf_get_keyring_items (NMConnection *connection,
 			if (!get_one_private_key (connection, setting_name, key_name,
 			                          found->secret, secrets, error)) {
 				if (!*error) {
-					g_set_error (error, NM_SETTINGS_ERROR, 1,
+					g_set_error (error, NM_SETTINGS_ERROR, NM_SETTINGS_ERROR_SECRETS_UNAVAILABLE,
 					             "%s.%d - %s/%s unknown error from get_one_private_key().",
 					             __FILE__, __LINE__, connection_name, setting_name);
 				}
