@@ -1,5 +1,17 @@
 2008-11-03  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+	  src/applet-device-wifi.c
+	  src/applet-device-wired.c
+	  src/applet.c
+	  src/gconf-helpers/gconf-helpers.c
+	  src/gconf-helpers/nma-gconf-connection.c
+	  src/vpn-password-dialog.c
+		- Use detailed NMSettings errors
+
+2008-11-03  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-dialogs.c
 		- (create_info_label, create_info_label_security, info_dialog_add_page):
 			Make info items selectable (bgo #558975)
